--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,7 +13,7 @@
   "NO_ACCOUNT_MESSAGE": "Don't have an account yet?",
 
   "TAB1_TITLE": "Home",
-  "TAB2_TITLE": "Entities",
+  "TAB2_TITLE": "Timeline",
   "TAB3_TITLE": "Account",
 
   "MAP_TITLE": "Map",
