Various Frontend Changes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,7 @@
 
   "TAB1_TITLE": "Home",
   "TAB2_TITLE": "Timeline",
+  "TABx_TITLE": "Entities",
   "TAB3_TITLE": "Account",
 
   "MAP_TITLE": "Map",
